added delete and update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,9 @@
     <% if (user) { %>
         <% include partials/loggedin.ejs %>
     <% } else { %>
-        <p>You are not logged in. </p>
-		<a href="/auth/google">Login with Google HERE!</a>
+        <p>This is a simple guitar tracking app. Log in to start tracking the things you've been playing! You can log skills, songs, and the time spent practicing them! </p>
+		<a href="/auth/google">Login with Google!</a>
 	<% } %>
-    
-    
-
-    
     <br>
   </body>
 </html>
