--- a/views/songs/practice.ejs
+++ b/views/songs/practice.ejs
@@ -9,10 +9,11 @@
     <br><br><h2>Add Time Practiced</h2>
     <form method="POST"
       action="/songs/<%= song._id %>/practice/create">
-      <label>Time Practiced</label>
-      <input type="number" name="hours"><p>Hours</p>
-      <input type="number" name="minutes"><p>Minutes</p>
-      <label>Date:</label>
+      <p>Hours</p>
+      <input type="number" name="hours">
+      <p>Minutes</p>
+      <input type="number" name="minutes">
+      <p>Date:</p>
       <input type="date" name="date">
       <input type="submit" value="Add Time">
     </form>
