--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -8,6 +8,15 @@
 <body>
     <h1>Your Song: <%= song.song %></h1>
     <p>Difficulty: <%= song.difficulty%></p>
+    <form action="/songs/<%= song._id %>/update" method="POST">
+      <label>Song:
+          <input type="text" name="song">
+      </label></br>
+      <label>Difficulty:
+          <input type="number" name="difficulty">
+      </label></br>
+          <input type="submit" value="Update Song!">
+  </form>
     <a href="/songs/<%= song._id %>/practice">Add practice</a>
     <h1>Time Practiced:</h1>
     <% if (song.timePracticed.length) { %>
@@ -32,32 +41,6 @@
       <% } else { %>
         <h5>No Practices Yet</h5>
       <% } %>
-
-      <div>Skills Required:</div>
-    <ul>
-      <%- song.skillsNeeded.map(s => 
-        `<li>${s}</li>`
-      ).join('') %>
-
-      <% for (let i = 0; i < 1; i++) {
-        console.log(Object.entries(song.skillsNeeded[i]));
-      } %>
-
-    </ul>
-    <!-- end cast list -->
-  </section>
-    
-
-  <!-- what does "ACTION" MEAN? how is it different from ROUTING? in routes.js?  -->
-  <!-- i believe that the action merely takes you to this particular url, but you still have to handle the request in your routes.   -->
-  <form action="/songs/<%= song._id %>/addskill" method="POST">
-    <select name="skillId">
-        <% for (let i = 0; i < skills.length; i++) { %>
-          <option value="<%= skills[i]._id %>"><%= skills[i].skill %></option>
-       <% } %>
-    </select>
-    <button type="submit">Add this skill to songs</button>
-  </form>
 
 </body>
 </html>
